[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/lancer.png" type="Texture" id=1]
[ext_resource path="res://Menu/PaletteMosaic-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu/buttonFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 2 )

[node name="MenuMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="Layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="HBoxContainer" parent="Layout"]
margin_right = 1280.0
margin_bottom = 129.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="Layout/Title"]
margin_right = 1280.0
margin_bottom = 129.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Leroy: Combat Evolved
"
align = 1

[node name="Main" type="HBoxContainer" parent="Layout"]
margin_top = 133.0
margin_right = 1280.0
margin_bottom = 702.0
size_flags_vertical = 3

[node name="Screenshot" type="TextureRect" parent="Layout/Main"]
margin_right = 500.0
margin_bottom = 569.0
rect_min_size = Vector2( 500, 500 )
texture = ExtResource( 1 )
expand = true

[node name="Buttons" type="VBoxContainer" parent="Layout/Main"]
margin_left = 504.0
margin_right = 1280.0
margin_bottom = 569.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start Game Button" type="Button" parent="Layout/Main/Buttons"]
margin_right = 776.0
margin_bottom = 187.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Start Game"

[node name="Options" type="Button" parent="Layout/Main/Buttons"]
margin_top = 191.0
margin_right = 776.0
margin_bottom = 378.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Layout/Main/Buttons"]
margin_top = 382.0
margin_right = 776.0
margin_bottom = 569.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="Credits" type="HBoxContainer" parent="Layout"]
margin_top = 706.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="Label" type="Label" parent="Layout/Credits"]
margin_right = 72.0
margin_bottom = 14.0
text = "Alpha 1.0.0"

[connection signal="button_up" from="Layout/Main/Buttons/Start Game Button" to="." method="_on_Start_Game_Button_button_up"]
[connection signal="button_up" from="Layout/Main/Buttons/Options" to="." method="_on_Options_button_up"]
[connection signal="button_up" from="Layout/Main/Buttons/Quit" to="." method="_on_Quit_button_up"]
